--- a/src/app/(pages)/login/LoginForm/index.module.scss
+++ b/src/app/(pages)/login/LoginForm/index.module.scss
@@ -1,22 +1,30 @@
 @import "../../../_css/common";
 
 .form {
+  width: 100%;
   margin-bottom: var(--base);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--base) / 2);
+  gap: 24px;
   align-items: flex-start;
-  width: 66.66%;
+  margin-top: 30px;
 
-  @include mid-break {
-    width: 100%;
-  }
 }
 
 .submit {
-  margin-top: calc(var(--base) / 2);
+  width: 100%;
 }
 
 .message {
   margin-bottom: var(--base);
+}
+
+.links {
+  display: grid;
+  justify-items: center;
+  align-items: start;
+  gap: 20px;
+  width: 100%;
+
+  margin-top: 50px;
 }
