--- a/src/app/_components/Categories/index.module.scss
+++ b/src/app/_components/Categories/index.module.scss
@@ -14,6 +14,12 @@
   h3 {
     font-weight: 400;
   }
+
+  @include small-break {
+    flex-direction: column;
+    align-items: start;
+    gap: 20px;
+  }
 }
 
 .list {
