--- a/src/app/_heros/CustomHero/index.module.scss
+++ b/src/app/_heros/CustomHero/index.module.scss
@@ -35,6 +35,7 @@
   justify-content: center;
   padding: 15% var(--gutter-h);
   width: 65%;
+ 
 
   @include mid-break {
     padding: 10% 30px;
@@ -49,6 +50,7 @@
   h2 {
     font-size: 70px;
     margin: 32px 0;
+    line-height: 100%;
 
     @include mid-break {
       font-size: 48px;
@@ -57,7 +59,7 @@
     }
 
     @include small-break {
-      width: 80%;
+      width: 100%;
       font-size: 24px;
       margin: 8px 0;
     }
