payload plugin-cloud installed and configured

--- a/src/app/_heros/Product/index.module.scss
+++ b/src/app/_heros/Product/index.module.scss
@@ -14,7 +14,7 @@
 .mediaWrapper {
   position: relative;
   min-height: 400px;
-  background-color: var(--color-dark-50);
+  background-color: var(--color-base-0);
 
   @include small-break {
     min-height: 250px;
