--- a/src/app/(pages)/orders/index.module.scss
+++ b/src/app/(pages)/orders/index.module.scss
@@ -30,12 +30,26 @@
   list-style: none;
 }
 
+.sectionTitle {
+  font-size: calc(var(--base) * 1.5);
+
+  @include small-break {
+    font-size: var(--base) ;
+  }
+}
+
 .item {
   display: flex;
   flex-wrap: 1;
   align-items: center;
   gap: calc(var(--base) / 2);
   text-decoration: none;
+
+  @include small-break {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
 }
 
 .itemContent {
@@ -48,6 +62,19 @@
 .itemTitle {
   margin-top: 0;
   margin-bottom: 0;
+
+  @include small-break {
+    font-size: calc(var(--base) * 0.7);
+  }
+}
+
+.itemTitleText {
+  font-size: var(--base);
+  font-weight: 700;
+
+  @include small-break {
+    font-size: calc(var(--base) * 0.8);
+  }
 }
 
 .itemMeta {
@@ -58,6 +85,10 @@
   & > * {
     margin: 0;
   }
+}
+
+.itemMetaTitle {
+  font-weight: 700;
 }
 
 .button {
